Project

General

Profile

Actions

Bug #37583

closed

mix luminous + master mons break ceph cli

Added by Sage Weil over 5 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

both luminous and ceph cli fail intermittently, depending on which mon they connect to.

gnit:build (master) 12:17 PM $ bin/ceph -s
*** DEVELOPER MODE: setting PATH, PYTHONPATH and LD_LIBRARY_PATH ***
2018-12-09 12:17:35.512 7f7d48297700 -1 WARNING: all dangerous and experimental features are enabled.
2018-12-09 12:17:35.560 7f7d48297700 -1 WARNING: all dangerous and experimental features are enabled.
no valid command found; 10 closest matches:
osd df {plain|tree}
osd perf
pg force-backfill <pgid> [<pgid>...]
pg force-recovery <pgid> [<pgid>...]
pg cancel-force-backfill <pgid> [<pgid>...]
pg cancel-force-recovery <pgid> [<pgid>...]
pg scrub <pgid>
pg debug unfound_objects_exist|degraded_pgs_exist
osd status {<bucket>}
pg deep-scrub <pgid>
Error EINVAL: invalid command
gnit:build (master) 12:17 PM $ bin/ceph -s
*** DEVELOPER MODE: setting PATH, PYTHONPATH and LD_LIBRARY_PATH ***
2018-12-09 12:17:36.364 7f6fad71a700 -1 WARNING: all dangerous and experimental features are enabled.
2018-12-09 12:17:36.406 7f6fad71a700 -1 WARNING: all dangerous and experimental features are enabled.
  cluster:
    id:     21bda716-a41e-4e91-a503-407644c88a9f
    health: HEALTH_OK

  services:
    mon: 3 daemons, quorum a,b,c (age 7s)
    mgr: x(active)
    osd: 1 osds: 1 up, 1 in

  data:
    pools:   0 pools, 0 pgs
    objects: 0 objects, 0 B
    usage:   309 GiB used, 63 GiB / 372 GiB avail
    pgs:     

Actions #1

Updated by Sage Weil over 5 years ago

  • Status changed from 12 to Fix Under Review
Actions #3

Updated by Greg Farnum over 5 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF