mon: CephBool -> CephChoices in command map for pre-nautilus mons

If pre-nautilus mons are in quorum, send out a pre-nautilus compatible
set of commands.  Although nautilus mons can do this same translation on
the fly for pre-nautilus clients, pre-nautilus mons can't, so do it for
all mons.  This means the new CephBool behavior will only start working
once you upgrade all mons to nautilus.

Fixes: http://tracker.ceph.com/issues/37583
Signed-off-by: Sage Weil <sage@redhat.com>